proofread and change link colors

--- a/public_html/mosIndex.css
+++ b/public_html/mosIndex.css
@@ -13,6 +13,12 @@ body{
     background-attachment: fixed;
         
 }
+a:link{
+    color: #339900;
+}
+a:visited{
+    color: #336600;
+}
 .content{
     width: 75%;
     max-width: 700px;
