--- a/public_html/mosIndex.css
+++ b/public_html/mosIndex.css
@@ -19,11 +19,19 @@ a:link{
 a:visited{
     color: #336600;
 }
-.content{
-    width: 75%;
-    max-width: 700px;
-    margin-left: auto;
-    margin-right: auto;
+@media screen and (max-width: 480px) {
+    .content{
+        width: 75%;
+        max-width: 700px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+@media screen and (min-width: 480px) {
+    .content{
+        margin-left: 5px;
+        margin-right: 5px;
+    }
 }
 h1{
     text-align:center;
@@ -42,4 +50,44 @@ h1{
 iframe{
     display: block;
     margin: auto;
+}
+
+.placeholder, .headerbar{
+    height: 25px;
+    line-height: 25px;
+}
+.headerbar{
+    background: #000;
+    padding: 5px 15px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+
+
+}
+a.pagelink, a.mainlink{
+    color: #FFF;
+    margin: 4px;
+    text-decoration: none;
+    padding: 4px 6px;
+}
+a.pagelink:visited, a.mainlink:visited{
+    color: #AAA;
+}
+a.pagelink:hover, a.mainlink:hover{
+    color: #000;
+    background: #FFF;
+
+}
+
+.headerbar .left, .headerbar .right{
+    display: inline-block;
+    position: absolute;
+}
+.headerbar .left{
+    left:0;
+}
+.headerbar .right{
+    right: 0;
 }
