--- a/public_html/mosIndex.css
+++ b/public_html/mosIndex.css
@@ -23,6 +23,7 @@ a:visited{
     .content{
         width: 75%;
         max-width: 700px;
+        min-width: 500px;
         margin-left: auto;
         margin-right: auto;
     }
