--- a/public_html/mosIndex.css
+++ b/public_html/mosIndex.css
@@ -33,6 +33,9 @@ a:visited{
         margin-left: -20px;
         margin-right: -20px;
     }
+    iframe{
+        width: 90%;
+    }
 }
 h1{
     text-align:center;
