--- a/public_html/mosIndex.css
+++ b/public_html/mosIndex.css
@@ -33,9 +33,20 @@ a:visited{
         margin-left: -20px;
         margin-right: -20px;
     }
-    iframe{
-        width: 90%;
-    }
+    
+}
+.videoWrapper {
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+}
+.videoWrapper iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
 h1{
     text-align:center;
