--- a/public_html/mosIndex.css
+++ b/public_html/mosIndex.css
@@ -74,7 +74,7 @@ iframe{
 .headerbar{
     background: #000;
     padding: 5px 15px;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
