--- a/public_html/mosIndex.css
+++ b/public_html/mosIndex.css
@@ -20,7 +20,7 @@ a:visited{
     color: #336600;
 }
 @media screen and (min-width: 530px) {
-    .content{
+    .mos_content{
         width: 75%;
         max-width: 700px;
         min-width: 530px;
@@ -29,7 +29,7 @@ a:visited{
     }
 }
 @media screen and (max-width: 530px) {
-    .content{
+    .mos_content{
         margin-left: -20px;
         margin-right: -20px;
     }
@@ -51,7 +51,7 @@ a:visited{
 h1{
     text-align:center;
 }
-.section{
+.mos_section{
     border-radius: 10px;
     margin: 30px;
     background-color: #eceadf;
@@ -59,12 +59,11 @@ h1{
     box-shadow: 2px -3px 3px rgba(0, 0, 0, 0.15);
     padding: 20px;
 }
+.mos_section:first-child{
+    margin-top: 0;
+}
 .indent{
     padding-left:20px;
-}
-iframe{
-    display: block;
-    margin: auto;
 }
 
 .placeholder, .headerbar{
