--- a/public_html/app.component.html
+++ b/public_html/app.component.html
@@ -7,7 +7,7 @@ Copyright B. Clint Hall 2016 all rights reserved
         <title>The Music of the Spheres</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel='stylesheet' type="text/css" href="./mosIndex.css">
+        <link rel='stylesheet' type="text/css" href="/MoSindex/mosIndex.css">
         <link rel="icon" type="image/png" href="/favicon.png" />
 
     </head>
@@ -15,16 +15,16 @@ Copyright B. Clint Hall 2016 all rights reserved
         <h1>Welcome to The Music of The Spheres</h1>
                 
         <div class="mos_content">
-            <div class='mos_section'>
+            <mat-card>
                 <p>I have a few web apps relating to music (and one relating to, um,
                     well, spheres), and I've got them parked here. Please enjoy.  If
                     you find something that you like or you have questions, I'd love to 
                     hear from you. My email address is theatetus7, and it is at gmail.
                 </p>
                 
-            </div>
-            <div class='mos_section'>
-                <h2>MusicSheet and WebAudioGUI</h2>
+            </mat-card>
+            <mat-card>
+                <mat-card-title>MusicSheet and WebAudioGUI</mat-card-title>
                 <p>These two are integrated into one, but if you are only interested in one or 
                     the other, there's no need to dive into both.  This really works best in Google's <a href="https://www.google.com/chrome/browser/desktop/index.html">Chrome browser</a>, though most of it 
                     works in <a href="www.mozilla.org/firefox-download">Firefox</a> too.</p>
@@ -61,9 +61,9 @@ Copyright B. Clint Hall 2016 all rights reserved
                         website, let's talk. theatetus7, you know, gmail.
                     </p>
                 </div>
-            </div>
-            <div class='mos_section'>
-                <h2><a href="/psalmsing">PsalmSing</a></h2>
+            </mat-card>
+            <mat-card>
+                <mat-card-title><a href="/psalmsing">PsalmSing</a></mat-card-title>
                 <p>
                     The idea here is to facilitate the chanting of psalms with a variety 
                     of different melodies or "tones."  You can compose and save your 
@@ -77,9 +77,9 @@ Copyright B. Clint Hall 2016 all rights reserved
                     If you try to compose or edit a psalm tone, enter notes by clicking 
                     where you want them on the staff, and edit them by right clicking on them.
                 </p>
-            </div>
-            <div class='mos_section'>
-                <h2><a href="/fretboardpractice">Fretboard Practice</a></h2>
+            </mat-card>
+            <mat-card>
+                <mat-card-title><a href="/fretboardpractice">Fretboard Practice</a></mat-card-title>
                 <p>
                     Helps you learn the notes on a guitar fretboard.  Select which fretboard positions
                     to practice. There are lots of options for how to quiz yourself.  </p>
@@ -98,9 +98,9 @@ Copyright B. Clint Hall 2016 all rights reserved
                         a real guitar.</li>
                 </ul>
                 <p>Mobile friendly.</p>
-            </div>
-            <div class="mos_section">
-                <h2><a href="/orbitgame">Orbit Game</a></h2>
+            </mat-card>
+            <mat-card>
+                <mat-card-title><a href="/orbitgame">Orbit Game</a></mat-card-title>
                 <p>
                     So this one deals with spheres.  It is a physics demo that I might turn
                     into a game sometime.  It's fun to play with.  It very accurately models 
@@ -112,9 +112,9 @@ Copyright B. Clint Hall 2016 all rights reserved
                     challenging when "Show Path" is off; it's super easy if you show the 
                     trajectory and use the "pause" feature).  Some fun(?) physics stats are listed.
                 </p>
-            </div>
-            <div class="mos_section">
-                <h2><a href="/FOL">Propositional Logic</a></h2>
+            </mat-card>
+            <mat-card>
+                <mat-card-title><a href="/FOL">Propositional Logic</a></mat-card-title>
                 <p>
                     Did you take a logic class in college?  I've taught logic and used it
                     in other classes I've taught as well.  This is a program I made for 
@@ -128,7 +128,7 @@ Copyright B. Clint Hall 2016 all rights reserved
                     that allowed students to submit proofs to me for grading, but it 
                     isn't set up on its current server.
                 </p>
-            </div>
+            </mat-card>
             
 
         </div>
